# apitests

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
apitests/: utils.py
examples/simple/: app.py  conftest.py  pytest.ini
examples/simple/tests/: apistubs.yaml  context.py  test_autogen_example.py  test_autogen_example.rag.md  test_generator.py
src/apitests/: base.py  helpers.py  mixins.py  points.py  settings.py  stub.py  workflow.py
src/apitests/contrib/: asserts.py  gemini.py  logs.py
src/apitests/generator/: __init__.py  generalizer.py  stubgen.py  transformer.py
src/apitests/jinja2/apitests/: diagram.html  tests.py.tpl  tests.rag.md.tpl
src/apitests/serialization/: arazzo.py  visual.py
