# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apitests"
version = "0.0.1"
authors = [
  { name="Eugene Rabtsau", email="e.ryabtsev@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests", 
]

[project.urls]
Homepage = "https://ainvention.net/gentests/"
