# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apitests"
version = "0.0.1"
authors = [
  { name="Eugene Rabtsau", email="e.ryabtsev@gmail.com" },
]
description = "APITESTS: AI-Powered Runtime Test Generator for Microservices"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests", 
    "PyYAML", 
    "Jinja2",
    "parse"
]

[project.urls]
Source = "https://github.com/ryabtsev/apitests"
